# tfs

./: configure.ac
conf/: ads.conf  ds.conf  meta.conf  ns.conf  rc.conf  remote_block_cache_tool.conf  rs.conf
src/common/: cdefine.h  func.cpp  func.h  internal.h  session_util.h
src/dataserver/: data_file.cpp  data_file.h  data_management.cpp  data_management.h  dataservice.cpp  logic_block.cpp  logic_block.h  sync_backup.cpp
src/message/: close_file_message.cpp  close_file_message.h  unlink_file_message.h
src/name_meta_server/: meta_server_service.cpp  meta_store_manager.h
src/nameserver/: Makefile.am  block_collect.cpp  client_request_server.cpp  layout_manager.cpp  server_manager.cpp  server_manager.h
src/new_client/: Makefile.am  local_key.cpp  local_key.h  tfs_client_impl.cpp  tfs_client_impl.h  tfs_file.cpp  tfs_rc_client_api.cpp  tfs_rc_client_api.h
src/phpclient/: php_tfs_client.cpp  php_tfs_client.h
src/tools/: Makefile.am
src/tools/cluster/: sync_by_blk.cpp  sync_file_base.cpp  sync_file_base.h
src/tools/dataserver/: gen_block_prefix.cpp
src/tools/nameserver/: Makefile.am  remote_block_cache_tool.cpp
src/tools/transfer/: block_console.cpp  block_console.h  transfer_block.cpp
